--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   firebase_core:
   firebase_auth: ^4.9.0
   google_sign_in:
-
+  sqflite:
+  path:
 dev_dependencies:
   flutter_test:
     sdk: flutter
